<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_direct_chat"
        android:icon="@drawable/ic_action_add_person"
        android:title="@string/chats_menu_direct_chat"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_create_group"
        android:icon="@drawable/ic_action_add_group"
        android:title="@string/chats_menu_create_group"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_pstn_call"
        android:icon="@drawable/ic_action_call"
        android:title="@string/chats_menu_pstn_call"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_settings"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_logout"
        android:title="@string/logout"
        app:showAsAction="never" />


</menu>